// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate s3 source should throw on empty path in source 1`] = `
"source[0].s3.path: Path cannot be empty
params.image: Could not find any usage in sources, storage or paths"
`;

exports[`validate s3 source should throw on invalid params in source 1`] = `"sources.[0]: Expected { http: { root: string; }; } | { s3: { access_key_id: string; secret_access_key: string; region: string; bucket_name: string; path: string; } & { endpoint?: string; }; } | { volume: { root: string; }; }, but was object"`;

exports[`validate s3 source should throw on invalid source 1`] = `"sources.[0]: Expected { http: { root: string; }; } | { s3: { access_key_id: string; secret_access_key: string; region: string; bucket_name: string; path: string; } & { endpoint?: string; }; } | { volume: { root: string; }; }, but was object"`;

exports[`validate s3 source should throw on missing params in path on source 1`] = `
"source[0].s3.path: Missing param \\"image\\" in paths
params.uuid: Could not find any usage in sources, storage or paths"
`;

exports[`validate s3 source should throw on missing params in source 1`] = `
"storage.s3.path: Missing path parameters
params.image: Could not find any usage in sources, storage or paths"
`;
